--- a/devel/caml-ocamlnet/Portfile
+++ b/devel/caml-ocamlnet/Portfile
@@ -29,6 +29,8 @@ depends_lib         port:ocaml \
                     port:caml-findlib \
                     port:caml-pcre
 
+patchfiles          patch-http_client.ml.diff patch-rpc_transport.ml.diff patch-uq_engines.ml.diff
+
 post-patch {
     set ocaml_site_path [exec ocamlfind printconf destdir]
     reinplace       "s|\$(OCAMLFIND) install|\$(OCAMLFIND) install -destdir ${destroot}/${ocaml_site_path}|g" \
