--- a/devel/caml-uuidm/Portfile
+++ b/devel/caml-uuidm/Portfile
@@ -27,4 +27,4 @@ depends_lib         port:ocaml \
 
 use_configure       no
 
-patchfiles          patch-Makefile.diff
+patchfiles          patch-Makefile.diff patch-META.diff
