--- a/devel/caml-sqlite3/Portfile
+++ b/devel/caml-sqlite3/Portfile
@@ -35,7 +35,7 @@ pre-destroot {
 }
 
 post-destroot {
-    xinstall -d -m 644 ${destroot}${prefix}/share/doc/${name}
+    xinstall -d -755 ${destroot}${prefix}/share/doc/${name}
     eval xinstall -m 644 [glob ${worksrcpath}/doc/*.html] \
         ${destroot}/${prefix}/share/doc/${name}
 }
