fix fork+threads in OCaml-3.11.0, patch from PR#4666 in OCaml bug tracker

--- a/lang/ocaml/Portfile
+++ b/lang/ocaml/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            ocaml
 version         3.11.0
+revision        1
 set major_vers  [join [lrange [split ${version} .] 0 1] .]
 platforms       darwin
 maintainers     pguyot@kallisys.net openmaintainer
@@ -31,6 +32,8 @@ universal_variant   no
 
 set doc_distname    ${name}-${major_vers}-refman
 set docdir            ${prefix}/share/doc/${name}-${version}
+
+patchfiles          ocaml-threads-fork.diff
 
 platform darwin 9 {
     macosx_deployment_target    10.4
