minor fixes to omake to comply with port lint

--- a/devel/omake/Portfile
+++ b/devel/omake/Portfile
@@ -1,8 +1,10 @@
 # $Id: Portfile 31207 2007-11-18 10:25:12Z erickt@macports.org $
 
 PortSystem          1.0
+
 name                omake
 version             0.9.8.5-3
+platforms           darwin
 categories          devel
 maintainers         erickt@macports.org
 description         OMake is a build system designed for scalability and portability
@@ -18,7 +20,7 @@ checksums           md5 d114b3c4201808aacd73ec1a98965c47 \
                     sha1 e78c9d8858749f5e234cba303637980e24085cbc \
                     rmd160 2364e29a7cc9bd6aaf837818bbe0a64ef4afce14
 
-patchfiles          stdin_stdout.bin patch-omake.diff
+patchfiles          patch-stdin_stdout.bin.diff patch-omake.diff
 
 depends_lib         port:ocaml
 
