--- a/devel/cryptokit/Portfile
+++ b/devel/cryptokit/Portfile
@@ -3,6 +3,7 @@
 PortSystem          1.0
 name                cryptokit
 version             1.3
+revision            1
 categories          devel security
 maintainers         anil@recoil.org
 description         Objective Caml interface to cryptographic functions.
@@ -18,7 +19,7 @@ checksums           md5     d7de01d0702d16b3491c9e794ebb2cc3 \
                     rmd160  bdf1ec365562b534b7995d0f2c3fc06ec203111f
 depends_lib         bin:camlp4:ocaml
 use_configure       no
-build.target        all allopt
+build.target        all allopt doc
 
 set instdir         ${destroot}${prefix}/lib/ocaml/site-lib
 destroot.args       INSTALLDIR=${instdir}/cryptokit
@@ -30,6 +31,9 @@ pre-destroot {
 post-destroot {
         system "ranlib ${instdir}/cryptokit/cryptokit.a"
         system "ranlib ${instdir}/cryptokit/libcryptokit.a"
-        xinstall META ${instdir}/cryptokit/META
+        xinstall ${worksrcpath}/META ${instdir}/cryptokit/META
         system "mv ${instdir}/cryptokit/stublibs/*.so ${instdir}/stublibs/"
+        xinstall -d -755 ${destroot}${prefix}/share/doc/${name}
+        eval xinstall -m 644 [glob ${worksrcpath}/doc/*] \
+            ${destroot}/${prefix}/share/doc/${name}
 }
