fix typo in caml-ansicolor installation

--- a/devel/caml-ansicolor/Portfile
+++ b/devel/caml-ansicolor/Portfile
@@ -33,7 +33,7 @@ pre-destroot {
 }
 
 post-destroot {
-    xinstall -d -755 ${destroot}${prefix}/share/doc/${name}
+    xinstall -d -m 755 ${destroot}${prefix}/share/doc/${name}
     eval xinstall -m 644 [glob ${worksrcpath}/ANSITerminal.html/*.html] \
         ${destroot}/${prefix}/share/doc/${name}
 }
