--- a/devel/cryptokit/Portfile
+++ b/devel/cryptokit/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 name                cryptokit
 version             1.3
-revision            1
+revision            2
 categories          devel security
 maintainers         anil@recoil.org
 description         Objective Caml interface to cryptographic functions.
@@ -23,7 +23,7 @@ build.target        all allopt doc
 
 set instdir         ${destroot}${prefix}/lib/ocaml/site-lib
 destroot.args       INSTALLDIR=${instdir}/cryptokit
-patchfiles          patch-META
+patchfiles          patch-META patch-Makefile
 pre-destroot {
         file mkdir ${instdir}/cryptokit/stublibs
         file mkdir ${instdir}/stublibs
